Library para composer

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,9 @@
+code.analysis.excludes=
+file.reference.traycommerce-library-php-vendor=vendor
+ignore.path=\
+    ${file.reference.traycommerce-library-php-vendor}
 include.path=${php.global.include.path}
-php.version=PHP_56
+php.version=PHP_70
 source.encoding=UTF-8
 src.dir=.
 tags.asp=false
