--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+/nbproject/private/
+
 index.php
 
 # Created by https://www.gitignore.io/api/git,node,code,linux,windows,composer,netbeans,notepadpp,sublimetext
