Adicionado manual do SDK

--- a/composer.json
+++ b/composer.json
@@ -29,5 +29,8 @@
         "test": []
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "require-dev": {
+        "victorjonsson/markdowndocs": "^1.3"
+    }
 }
