--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,9 +1,10 @@
+auxiliary.org-netbeans-modules-php-apigen.enabled=true
 auxiliary.org-netbeans-modules-php-editor.fluent_2e_setter_2e_project_2e_property=true
 auxiliary.org-netbeans-modules-php-editor.getter_2e_setter_2e_method_2e_name_2e_generation=AS_JAVA
 auxiliary.org-netbeans-modules-php-editor.public_2e_modifier_2e_project_2e_property=true
 copy.src.files=false
 copy.src.on.open=false
-copy.src.target=C:\\xampp\\htdocs\\traycommerce-library-php
+copy.src.target=/home/weslley/C:\\xampp\\htdocs\\traycommerce-library-php
 index.file=
 run.as=LOCAL
 url=http://localhost/traycommerce-library-php/
