--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,6 @@
 code.analysis.excludes=
 file.reference.traycommerce-library-php-vendor=vendor
-ignore.path=\
-    ${file.reference.traycommerce-library-php-vendor}
+ignore.path=
 include.path=${php.global.include.path}
 php.version=PHP_70
 source.encoding=UTF-8
